<resources>
    <string name="app_name">DIY Home Hacks</string>
    <string name="counter_top_name">Updating Kitchen CounterTop</string>
    <string name="smart_bidet_name">Installing SmartBidet Toilet Seat Cover</string>
    <string name="ispring_name">Installing iSpring Under Sink Water Filtration System</string>
    <string name="screen_iphone_name">Replacing iPhone 7 Plus Screen</string>
    <string name="drying_rack_name">DIY Clothes Drying Rack</string>
    <string name="pencil_box_name">DIY Pencil Box</string>

    <string name="build_cattree_name">Making A Cat Tree</string>
    <string name="clean_burnt_pan_name">Cleaning A Burnt Pan</string>
    <string name="fix_clogged_sink_name">Fixing A Clogged Sink</string>
    <string name="fix_door_handler_name">Changing Door Handlers</string>
    <string name="build_deck_name">Building A Deck </string>

    <string name="level_b1">Level: Beginner I</string>
    <string name="level_b2">Level: Beginner II</string>
    <string name="level_b3">Level: Beginner III</string>
    <string name="level_i1">Level: Intermediate I</string>
    <string name="level_i2">Level: Intermediate II</string>
    <string name="level_i3">Level: Intermediate III</string>
    <string name="level_a1">Level: Advanced I</string>
    <string name="level_a2">Level: Advanced II</string>
    <string name="level_a3">Level: Advanced III</string>
    <string name="level_m1">Level: Master</string>

    <string name="counter_top_time">Estimated Time: 3 - 4 hours</string>
    <string name="smart_bidet_time">Estimated Time: 15 - 25 minutes</string>
    <string name="ispring_time">Estimated Time: 1 - 2 hours</string>
    <string name="screen_iphone_time">Estimated Time: 6 - 15 minutes</string>
    <string name="drying_rack_time">Estimated Time: 3 - 4 hours</string>
    <string name="pencil_box_time">Estimated Time: 10 - 20 minutes</string>

    <string name="CatTree_time">Estimated Time: 2 - 3 hours</string>
    <string name="pan_time">Estimated Time: 10 - 15 minutes</string>
    <string name="door_handler_time">Estimated Time: under 1 hour</string>
    <string name="deck_time">Estimated Time: 3 -5 days </string>

    <string name="toast_do_it">Great Choice! Let\'s Do It!</string>

    <string name="rating_4">Rating: ❤❤❤❤</string>
    <string name="rating_5">Rating: ❤❤❤❤❤</string>

    <!--Post Staggered Recycler View data-->
    <string name="painting_url">https://www.familyhandyman.com/wp-content/uploads/2017/05/FH16JUN_PAINTS_11.jpg</string>
    <string name="painting_hack_title">11 Little Known Painting Hacks from Expert Field Editors</string>
    <string name="painting_author">FamilyHandymen</string>
    <string name="painting_likes">♡ 5.5K</string>

    <string name="refrig_url">https://www.familyhandyman.com/wp-content/uploads/2019/04/shutterstock_561902914-1200x675.jpg</string>
    <string name="refrig_title">7 Genius Organization Tips to Transform Your Refrigerator</string>
    <string name="refrig_author">JacquelineWeiss</string>
    <string name="refrig_likes">♡ 1.9K</string>

    <string name="cattree_url">https://www.bybrittanygoldwyn.com/wp-content/uploads/2016/12/Cat-Tree-5-March-13.jpg</string>
    <string name="cattree_title">50 bucks Makes a Cute Cat Tree</string>
    <string name="cattree_author">一条鲫鱼呀</string>
    <string name="cattree_likes">♡ 850</string>

    <string name="porridge_url">https://nourisheveryday.com/wp-content/uploads/2016/04/Healthy-Carrot-Cake-Porridge-N2.jpg</string>
    <string name="porridge_title">Healthy Carrot Cake Porridge</string>
    <string name="porridge_author">MoniqueTheNutritionist</string>
    <string name="porridge_likes">♡ 99</string>

</resources>
