<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view_project"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/project_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/countertop" />

        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/project_photo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/counter_top_name"/>

        <TextView
            android:id="@+id/project_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_name"
            android:layout_toRightOf="@+id/project_photo"
            android:textSize="18sp"
            android:text="@string/level_a1"/>

        <TextView
            android:id="@+id/project_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_level"
            android:layout_toRightOf="@+id/project_photo"
            android:textSize="18sp"
            android:text="@string/counter_top_time"/>

        <TextView
            android:id="@+id/project_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_time"
            android:layout_toRightOf="@+id/project_photo"
            android:textSize="18sp"
            android:text="@string/rating_4"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>