<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@color/background">

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/painting"
                android:scaleType="center"/>

            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/painting_hack_title"
                android:layout_below="@id/post_image"
                android:layout_marginTop="8dp"
                style="@style/post_title"/>

            <TextView
                android:id="@+id/post_author"
                style="@style/card_info_author"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_title"
                android:layout_marginTop="3dp"
                android:text="@string/painting_author" />

            <TextView
                android:id="@+id/post_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/painting_likes"
                style="@style/card_info_likes"
                android:layout_marginLeft="20dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/post_author"
                android:layout_below="@+id/post_title"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>