<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MakePencilBoxActivity">
    <!--<VideoView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="250dp" />-->

    <view
        android:id="@+id/youtubePlayer"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/defaultTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/pencil_box_name"/>

            <View
                android:layout_width = "fill_parent"
                android:layout_height="2dp"
                android:layout_centerVertical ="true"
                android:layout_marginTop="5dp"
                android:background="@color/separator"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/project_author"/>
            <View
                android:layout_width = "fill_parent"
                android:layout_height="2dp"
                android:layout_centerVertical ="true"
                android:background="@color/separator"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/project_detail"/>
            <View
                android:layout_width = "fill_parent"
                android:layout_height="2dp"
                android:layout_centerVertical ="true"
                android:background="@color/separator"/>
            <TextView
                style="@style/cardParagraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/pencil_box_tool"/>
            <View
                android:layout_width = "fill_parent"
                android:layout_height="2dp"
                android:layout_centerVertical ="true"
                android:layout_marginTop="5dp"
                android:background="@color/separator"/>
            <TextView
                style="@style/cardParagraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/pencil_box_tips"/>
            <View
                android:layout_width = "fill_parent"
                android:layout_height="2dp"
                android:layout_centerVertical ="true"
                android:layout_marginTop="5dp"
                android:background="@color/separator"/>
            <TextView
                style="@style/defaultTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:text="Recommended for you..."/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/project_photo"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/screeniphone" />

                <TextView
                    android:id="@+id/project_name"
                    style="@style/cardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/project_photo"
                    android:text="@string/screen_iphone_name"/>

                <TextView
                    android:id="@+id/project_level"
                    style="@style/cardParagraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/project_name"
                    android:layout_toRightOf="@+id/project_photo"
                    android:text="@string/level_b2"/>

                <TextView
                    android:id="@+id/project_time"
                    style="@style/cardParagraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/project_level"
                    android:layout_toRightOf="@+id/project_photo"
                    android:text="@string/screen_iphone_time"/>

                <TextView
                    android:id="@+id/project_rating"
                    style="@style/cardParagraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/project_time"
                    android:layout_toRightOf="@+id/project_photo"
                    android:text="@string/rating_4"/>

            </RelativeLayout>

            <View
                android:layout_width = "fill_parent"
                android:layout_height="2dp"
                android:layout_centerVertical ="true"
                android:layout_marginTop="5dp"
                android:background="@color/separator"/>

            <TextView
                android:id="@+id/comments_textLine"
                style="@style/defaultTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="5dp"
                android:text="Comments"/>


                    <ListView
                        android:id="@+id/messageListView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/linearLayout"
                        android:layout_alignParentTop="true"
                        android:divider="@android:color/transparent"
                        android:stackFromBottom="true"
                        tools:listitem="@layout/item_message" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/messageEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/sendButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="SEND"/>

                    </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>